# bedrock-agentcore-data-weaver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  app.py  data_analyzer.py  deploy.sh  example.py  project-pitch.md  pyproject.toml  test_api.py  test_invocations.py
server/: app.py  data_analyzer.py  data_analyzer_agentcore.py  s3_loader.py  streamlit_app.py  test_ac.py  test_api.py
server/agents/: __init__.py  pandas_agent.py
server/tests/: test_api.py
server/tools/: __init__.py  code_interpreter.py
tools/: __init__.py  upload_image.py
ui/: index.html  package.json  vite.config.js
ui/src/: App.vue  apiClient.js  style.css
