[project]
name = "pandas-agent-core"
version = "0.1.0"
description = "Standalone pandas agent for data analysis using LangChain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-experimental>=0.0.50",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "langchain-openai>=0.0.5",
    "langchain-aws>=0.1.0",
    "boto3>=1.34.0",
    "bedrock-agentcore>=0.1.0",
    "aws-opentelemetry-distro>=0.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*"]
